[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entity/Scene4/Portal.gd" type="Script" id=1]
[ext_resource path="res://Data/Sprites/Portal/Portal.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Data/Audio/Text 1.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0238

[node name="Portal" type="Area2D"]
modulate = Color( 0.341176, 1, 0.458824, 1 )
collision_layer = 128
collision_mask = 128
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 2 )
frames = ExtResource( 2 )
frame = 9
playing = true

[node name="Clear_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Create" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Portal_input_event"]
[connection signal="timeout" from="Clear_timer" to="." method="_on_Clear_timer_timeout"]
